# dataset

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CLAUDE.md  Example.yaml  LICENSE  LICENSE.txt  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  test.py  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml
dataset/: __init__.py  chunked.py  database.py  models.py  numpy_util.py  query.py  schema.py  table.py  types.py  util.py  write.py
dataset/freeze/: app.py  config.py  engine.py
dataset/freeze/format/: __init__.py  common.py  fcsv.py  fjson.py  ftabson.py
dataset/persistence/: database.py  table.py  types.py  util.py
docs/: Makefile  api.rst  conf.py  freezefile.rst  index.rst  install.rst  queries.rst  quickstart.rst  requirements.txt
docs/_themes/kr/: autotoc.html  layout.html  sidebarlogo.html
docs/_themes/kr/static/: flasky.css_t
sqlaload/: __init__.py  db.py  query.py  schema.py  util.py  write.py
test/: Freezefile.yaml  conftest.py  sample_data.py  test_database.py  test_dataset.py  test_freeze.py  test_freeze_app.py  test_freeze_config.py  test_models.py  test_persistence.py  test_row_type.py  test_sqlalchemy_refactoring.py  test_table.py
