[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataset"
dynamic = ["version"]
description = "Toolkit for Python-based database access."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Friedrich Lindenberg", email = "friedrich.lindenberg@gmail.com"},
    {name = "Gregor Aisch"},
    {name = "Stefan Wehrmeyer"},
]
keywords = ["sql", "sqlalchemy", "etl", "loading", "utility"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "sqlalchemy>=1.4.0,<3.0.0",
    "alembic>=0.6.2",
    "banal>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "twine",
    "ruff",
    "psycopg2-binary",
    "PyMySQL",
    "cryptography",
]

[project.urls]
Homepage = "https://github.com/pudo/dataset"
Repository = "https://github.com/pudo/dataset"
Documentation = "https://dataset.readthedocs.io/"

[tool.hatch.version]
path = "dataset/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["dataset"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
# Using ruff's recommended default rule sets
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
